# RaffiServer

./: CMakeLists.txt  CMakeSettings.json  README.md  compiler.cmake
header/: client.h  server.h  shared.h
src/: client.cpp  main.cpp  server.cpp
